# ibkr-client-portal-ocaml

./: .ocamlformat  Makefile  README.rst  dune-project  ibkr_cp.opam
.github/workflows/: build.yaml
lib/: account.atd  account.ml  client.ml  common.ml  contract.atd  contract.ml  contract.mli  dune  live_order_type.ml  marketdata.atd  marketdata.ml  marketdata.mli  order.atd  order.ml  order_side.ml  order_tif.ml  order_type.ml  portfolio.atd  portfolio.ml  portfolio.mli  portfolio_asset_class.ml  session.atd  session.ml  session.mli  streaming.atd  streaming.ml  test.ml  trade_side.ml  trades.atd  trades.ml  trades.mli  types2.ml
test/: account.ml  dune  order.ml  session.ml  trades.ml
test/resource/: iserver_accounts_success.json  iserver_auth_status_success.json  order_place_order_lmt.json  order_place_order_mkt.json  trades.json
